Search icon alignment issue fixed. Refactored for release v1.0.

--- a/css/style.css
+++ b/css/style.css
@@ -554,6 +554,7 @@ textarea.form-input {
   transform: translateY(-50%) translateZ(0);
   -webkit-transform: translateY(-50%) translateZ(0);
   -webkit-font-smoothing: antialiased;
+  margin-top: 0.45em;
 }
 
 .library-search:focus-within .library-search-icon {
